Edited footer to link to new website, issue tracker and source code repository

--- a/app/views/layouts/public.html.haml
+++ b/app/views/layouts/public.html.haml
@@ -42,12 +42,4 @@
           #sidebar.column.span-6.last
             .content= sidebar
 
-      #ft
-        .content
-          Copyright 2007 by Lars Sehested
-          = '&middot;'
-          = link_to 'Project home'[], 'http://code.google.com/p/scorekeeper/', :target => '_blank'
-          = '&middot;'
-          = link_to 'Report issue'[], 'http://code.google.com/p/scorekeeper/issues/entry', :target => '_blank'
-
-    = render :partial => 'shared/google_analytics'
+      = render :partial => 'shared/footer'
