--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -48,12 +48,4 @@
           #sidebar.column.span-6.last
             .content= sidebar
   
-      #ft.column.span-24
-        .content
-          Copyright 2007 by Lars Sehested
-          = '&middot;'
-          = link_to 'Project home'[], 'http://code.google.com/p/scorekeeper/', :target => '_blank'
-          = '&middot;'
-          = link_to 'Report issue'[], 'http://code.google.com/p/scorekeeper/issues/entry', :target => '_blank'
-    
-    = render :partial => 'shared/google_analytics'
+      .column.span-24= render :partial => 'shared/footer'
