--- a/app/views/layouts/login.html.haml
+++ b/app/views/layouts/login.html.haml
@@ -36,12 +36,4 @@
 
           .content= yield
 
-      #ft
-        .content
-          Copyright 2007 by Lars Sehested
-          = '&middot;'
-          = link_to 'Project home'[], 'http://code.google.com/p/scorekeeper/', :target => '_blank'
-          = '&middot;'
-          = link_to 'Report issue'[], 'http://code.google.com/p/scorekeeper/issues/entry', :target => '_blank'
-
-    = render :partial => 'shared/google_analytics'
+      = render :partial => 'shared/footer'
