--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -326,6 +326,8 @@ h3 {
       font-weight: bold; }
 #bd .edit_user {
   margin-top: 1.5em; }
+#bd .edit_account {
+  margin-top: 1.5em; }
 
 #sidebar input {
   display: block;
