Added explanation of what a newbie is on the dashboard

--- a/app/views/dashboard/_leaderboard.html.haml
+++ b/app/views/dashboard/_leaderboard.html.haml
@@ -1,5 +1,8 @@
 .list
-  %h3= title
+  %h3
+    = title
+    - if details.length > 0
+      %span.details= details
   %table
     %tr
       %th= '&nbsp;'
