--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -168,6 +168,11 @@ h3
   :padding 0
   :margin-bottom 5px
   :font-weight bold
+  
+  .details
+    :font-size 11px
+    :color #999999
+    :font-weight normal
 
 #bd
   .bottom_space
