--- a/app/views/layouts/application.iphone.haml
+++ b/app/views/layouts/application.iphone.haml
@@ -2,7 +2,7 @@
 %html{ :xmlns => 'http://www.w3.org/1999/xhtml', :lang => "en" }
   %head
     %title= page_title
-    %meta{ :http_equiv => 'content-type', :content => 'text/html; charset=utf-8' }
+    %meta{ 'http-equiv' => 'content-type', :content => 'text/html; charset=utf-8' }
     = stylesheet_link_tag '/iui/iui.css'
     = javascript_include_tag '/iui/iui.js'
   %body
