--- a/app/views/layouts/application.iphone.haml
+++ b/app/views/layouts/application.iphone.haml
@@ -3,6 +3,7 @@
   %head
     %title= page_title
     %meta{ 'http-equiv' => 'content-type', :content => 'text/html; charset=utf-8' }
+    %meta{ :name => 'viewport', :content => 'width=320; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;' }
     = stylesheet_link_tag '/iui/iui.css'
     = javascript_include_tag '/iui/iui.js'
   %body
