--- a/app/views/dashboard/_leaderboard.html.haml
+++ b/app/views/dashboard/_leaderboard.html.haml
@@ -21,12 +21,12 @@
       %tr{ :class => cycle('odd', 'even') }
         %td= index + start_at
         %td
-          = link_to image_tag('icons/sport_soccer.png', :class => 'team', :alt => "Show this user's games"[]), games_path(:filter => user.id)
+          = link_to image_tag('icons/sport_soccer.png', :class => 'team', :alt => "Show this user's matches"[]), matches_path(:filter => user.id)
           = user_link_full(user)
         %td= user.ranking
         %td= user.memberships_count
-        %td= user.games_won
-        %td= user.games_lost
+        %td= user.matches_won
+        %td= user.matches_lost
         %td= user.winning_percentage.to_s + '%'
         %td= user.goals_for
         %td= user.goals_against
