--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -1,7 +1,7 @@
 %h1 Welcome to Score Keeper
 
 %p
-  Finally! Score Keeper is online (though in pre-alpha :-). Score Keeper is a very simple web app for keeping score, rankings, etc. for games. However, in this initial version only Table Soccer, or foosball, is supported.
+  Finally! Score Keeper is online (though in pre-alpha :-). Score Keeper is a very simple web app for keeping score, rankings, etc. for matches. However, in this initial version only Table Soccer, or foosball, is supported.
   
 %h3
   Notes
