--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -72,7 +72,7 @@ textarea
   a:hover
     :text-decoration none
   
-  #add_game
+  #add_match
     :text-align right
   
     a
@@ -143,7 +143,7 @@ textarea
     .submit
       :margin-right 0
       
-#add_game_form
+#add_match_form
   :background-color #EEEEEE
   :padding-top 0.5em
   :padding-bottom 0.5em
@@ -235,14 +235,14 @@ h3
   #filter
     :margin-top 1.5em
         
-  #games
+  #matches
     .score
       :text-align center
 
     .comments
       :white-space nowrap
         
-  #game
+  #match
     h3
       :margin-top 1.5em
       
@@ -302,13 +302,13 @@ h3
     :padding-top 10px
     :padding-bottom 10px
 
-  .game
+  .match
     :margin-bottom 20px
 
     label
       :font-weight bold
 
-  #new_game
+  #new_match
     h3
       :display block
       :margin 0
@@ -341,7 +341,7 @@ h3
       :width 48.9%
       :padding-left 1%
 
-  #recent_games
+  #recent_matches
     .members
       :width 40%
 
@@ -352,8 +352,8 @@ h3
     .comments
       :white-space nowrap
 
-  #games_per_day
-    .games_played
+  #matches_per_day
+    .matches_played
       :text-align right
 
   a.rss
@@ -507,7 +507,7 @@ h3
           :font-weight bold
 
     .user, .team
-      .gamelink
+      .matchlink
         :margin-top 1.5em
         
         a
