--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -26,14 +26,14 @@
 
       #menu.clear
         .column.span-16= render :partial => 'shared/menu'
-        #add_game.column.span-8.last
+        #add_match.column.span-8.last
           - if enabled_users.size >= 4
-            = link_to_function image_tag('icons/add.png') + ' ' + 'Add game'[], "$('#add_game_form').toggle()"
+            = link_to_function image_tag('icons/add.png') + ' ' + 'Add match'[], "$('#add_match_form').toggle()"
           - else
             #user_minimum= 'You need at least 4 users'[]
           
-      #add_game_form.column.span-24{ :style => 'display: none' }
-        = render :partial => 'shared/add_game_form'
+      #add_match_form.column.span-24{ :style => 'display: none' }
+        = render :partial => 'shared/add_match_form'
   
       - unless @page_title.blank?
         %h2#page_title= @page_title
