--- a/app/views/shared/_menu.html.haml
+++ b/app/views/shared/_menu.html.haml
@@ -1,6 +1,6 @@
 %ul
   %li{:class => controller.controller_name == 'dashboard' ? 'current' : nil}= link_to 'Dashboard'[], root_path
-  %li{:class => controller.controller_name == 'games' ? 'current' : nil}= link_to 'Games'[], games_path
+  %li{:class => controller.controller_name == 'matches' ? 'current' : nil}= link_to 'Matches'[], matches_path
   %li{:class => controller.controller_name == 'teams' ? 'current' : nil}= link_to 'Teams'[], teams_path
   %li{:class => controller.controller_name == 'users' ? 'current' : nil}= link_to 'Users'[], users_path
   - if admin?
