--- a/app/views/teams/index.html.haml
+++ b/app/views/teams/index.html.haml
@@ -6,10 +6,10 @@
       %tr
         %th{ :colspan => 5 }= 'Members'[]
         %th.ranking= 'Total ranking'[]
-        %th= 'Games won'[]
-        %th= 'Games played'[]
+        %th= 'Matches won'[]
+        %th= 'Matches played'[]
         %th= 'Winning percentage'[]
-        %th{ :colspan => 2 }= '% of games on team'[]
+        %th{ :colspan => 2 }= '% of matches on team'[]
 
       - @teams.each do |team|
         %tr{ :class => cycle('odd', 'even') }
@@ -17,13 +17,13 @@
           %td.user -
           %td.user= user_link_full(team[:players].last)
           %td.user
-            = link_to image_tag('icons/sport_soccer.png', :class => 'team', :alt => "Show this team's games"[]), games_path(:filter => team[:team_ids])
+            = link_to image_tag('icons/sport_soccer.png', :class => 'team', :alt => "Show this team's matches"[]), matches_path(:filter => team[:team_ids])
           %td.user
             = link_to image_tag('icons/chart_bar.png', :class => 'team'), team_path(team[:team_ids])
           %td.ranking= team[:total_ranking]
-          %td= team[:games_won]
-          %td= team[:games_played]
+          %td= team[:matches_won]
+          %td= team[:matches_played]
           %td= team[:percentage].to_s + '%'
           - team[:players].each do |player|
             %td
-              = (((team[:games_played].to_f / player.memberships_count.to_f) * 1000).to_i / 10.0).to_s + '%'
+              = (((team[:matches_played].to_f / player.memberships_count.to_f) * 1000).to_i / 10.0).to_s + '%'
