--- a/app/views/teams/show.html.haml
+++ b/app/views/teams/show.html.haml
@@ -16,7 +16,7 @@
             = link_to image_tag(user.mugshot.public_filename(:thumb), :alt => h(user.name)), user
           = link_to h(user.name), user
 
-    .gamelink= link_to image_tag('icons/sport_soccer.png', :class => 'team', :alt => "Show this team's games"[]) + ' ' + 'Show games'[], games_path(:filter => @ids.join(','))
+    .matchlink= link_to image_tag('icons/sport_soccer.png', :class => 'team', :alt => "Show this team's matches"[]) + ' ' + 'Show matches'[], matches_path(:filter => @ids.join(','))
       
     #opponents
       %h3= 'Opponents'[]
@@ -24,7 +24,7 @@
         .opponent{ :class => cycle('odd', 'even') }
           .members
             = link_to Team.team_members(opponent.team_ids).collect { |user| h(user.display_name) }.join(', '), team_path(opponent.team_ids)
-          %label= 'Games'[] + ':'
-          = opponent.games
+          %label= 'Matches'[] + ':'
+          = opponent.matches
           %label= 'Won'[] + ':'
           = opponent.wins
