--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -6,14 +6,14 @@
     - form_tag @user, :method => :get do
       = select_tag('period', options_for_select(time_periods, @time_period), :onchange => 'this.form.submit();')
       = submit_tag 'Update'[]
-    = graph(formatted_user_games_url(@user.id, :graph, :period => @time_period))
+    = graph(formatted_user_matches_url(@user.id, :graph, :period => @time_period))
 
 - content_for :sidebar do
   .user
     - if @user.mugshot
       .mugshot= image_tag @user.mugshot.public_filename(:thumb), :alt => h(@user.name)
 
-    .gamelink= link_to image_tag('icons/sport_soccer.png', :class => 'team', :alt => "Show this user's games"[]) + ' ' + 'Show games'[], games_path(:filter => @user.id)
+    .matchlink= link_to image_tag('icons/sport_soccer.png', :class => 'team', :alt => "Show this user's matches"[]) + ' ' + 'Show matches'[], matches_path(:filter => @user.id)
 
     #counts
       %p.position
@@ -26,16 +26,16 @@
             %label= 'Ranking'[] + ':'
             = @user.ranking
           %td.against
-            %label= 'Played games'[] + ':'
+            %label= 'Played matches'[] + ':'
             = @user.memberships_count
 
         %tr
           %td.for
-            %label= 'Games won'[] + ':'
-            = @user.games_won
+            %label= 'Matches won'[] + ':'
+            = @user.matches_won
           %td.against
-            %label= 'Games lost'[] + ':'
-            = @user.games_lost
+            %label= 'Matches lost'[] + ':'
+            = @user.matches_lost
 
         %tr
           %td.for
@@ -49,10 +49,10 @@
           %tr
             %td.for
               %label= 'Best ranking'[] + ':'
-              = link_to @all_time_high.current_ranking, game_path(@all_time_high.team.game), :class => 'game'
+              = link_to @all_time_high.current_ranking, match_path(@all_time_high.team.match), :class => 'match'
             %td.against
               %label= 'Worst ranking'[] + ':'
-              = link_to @all_time_low.current_ranking, game_path(@all_time_low.team.game), :class => 'game'
+              = link_to @all_time_low.current_ranking, match_path(@all_time_low.team.match), :class => 'match'
 
       - admin_area do
         %p
