--- a/app/views/accounts/show.html.haml
+++ b/app/views/accounts/show.html.haml
@@ -4,7 +4,7 @@
     %tr
       %th= 'Name'
       %th= 'E-mail'
-      %th= 'Matche'
+      %th= 'Matches'
     - @account.users.each do |user|
       %tr{ :class => cycle('odd', 'even') }
         %td= h(user.name)
