--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -355,6 +355,9 @@ h3
   #matches_per_day
     .matches_played
       :text-align right
+      
+    .chart
+      :margin-top 1em
 
   a.rss
     img
