--- a/app/views/matches/index.html.haml
+++ b/app/views/matches/index.html.haml
@@ -34,14 +34,12 @@
   .pagination= will_paginate @matches
 
   .bottom_space
-    = link_to 'RSS feed (all matches)'[] + ' ' + image_tag('rss.gif'), formatted_matches_url(:rss), :class => 'rss'
+    = link_to 'Atom feed (all matches)'[] + ' ' + image_tag('rss.gif'), match_feed_url, :class => 'rss'
     - unless params[:filter].blank?
-      = link_to 'RSS feed (filtered)'[] + ' ' + image_tag('rss.gif'), formatted_matches_url(:rss, :filter => params[:filter]), :class => 'rss'
+      = link_to 'Atom feed (filtered)'[] + ' ' + image_tag('rss.gif'), match_feed_url(:filter => params[:filter]), :class => 'rss'
 
 - content_for :head do
-  = auto_discovery_link_tag :atom, formatted_matches_url(:atom), :title => 'All matches'[]
-  = auto_discovery_link_tag :rss, formatted_matches_url(:rss), :title => 'All matches'[]
+  = auto_discovery_link_tag :atom, match_feed_url, :title => 'All matches'[]
 
   - unless params[:filter].blank?
-    = auto_discovery_link_tag :atom, formatted_matches_url(:atom, :filter => params[:filter]), :title => 'Filtered'[]
-    = auto_discovery_link_tag :rss, formatted_matches_url(:rss, :filter => params[:filter]), :title => 'Filtered'[]
+    = auto_discovery_link_tag :atom, match_feed_url(:filter => params[:filter]), :title => 'Filtered'[]
