Now showing ranking and position for users in iPhone mode

--- a/app/views/users/show.iphone.haml
+++ b/app/views/users/show.iphone.haml
@@ -1,4 +1,13 @@
 #user.panel{ :title => h(@user.name) }
+  %h2= 'Ranking'[]
+  %fieldset
+    .row
+      %label= 'Points'[]
+      %input{ :type => 'text', :value => @user.ranking }
+    .row
+      %label= 'Position'[]
+      %input{ :type => 'text', :value => @user.position }
+
   %h2= 'Matches'[]
   %fieldset
     .row
