Add :alt to matches per day-chart

--- a/app/views/dashboard/_matches_per_day.html.haml
+++ b/app/views/dashboard/_matches_per_day.html.haml
@@ -11,4 +11,4 @@
         %td.matches_played= day[1]
     - reset_cycle
     
-= image_tag matches_per_day_chart(matches_per_day), :class => 'chart'
+= image_tag matches_per_day_chart(matches_per_day), :class => 'chart', :alt => 'Chart showing matches per day'
