--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -341,6 +341,9 @@ h3
       :width 48.9%
       :padding-left 1%
 
+  #logs
+    :margin-top 1.5em
+
   #recent_matches
     .members
       :width 40%
