--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -174,6 +174,34 @@ h3
     :color #999999
     :font-weight normal
 
+.list
+  :margin-top 1.5em
+
+  table
+    :width 100%
+
+    th
+      :border 0
+      :border-bottom 1px solid #3399CC
+      :background-color #77BBDD
+      :padding 3px
+      :color #FFFFFF
+
+    td
+      :border 0
+      :padding 3px
+      :text-align left
+      :vertical-align top
+    
+      img
+        :margin 0
+        :padding 0
+        :vertical-align text-bottom
+
+    tr.even
+      td
+        :background-color #EEEEEE
+
 #bd
   .bottom_space
     :padding-bottom 20px
@@ -203,34 +231,6 @@ h3
     input
       :display block
       :margin-bottom 10px
-  
-  .list
-    :margin-top 1.5em
-
-    table
-      :width 100%
-
-      th
-        :border 0
-        :border-bottom 1px solid #3399CC
-        :background-color #77BBDD
-        :padding 3px
-        :color #FFFFFF
-
-      td
-        :border 0
-        :padding 3px
-        :text-align left
-        :vertical-align top
-      
-        img
-          :margin 0
-          :padding 0
-          :vertical-align text-bottom
-
-      tr.even
-        td
-          :background-color #EEEEEE
 
   #filter
     :margin-top 1.5em
@@ -355,13 +355,6 @@ h3
     .comments
       :white-space nowrap
 
-  #matches_per_day
-    .matches_played
-      :text-align right
-      
-    .chart
-      :margin-top 1em
-
   a.rss
     img
       :position relative
@@ -485,6 +478,16 @@ h3
       h3
         :padding 0
         :margin 0
+
+    #matches_per_day
+      h3
+        :margin-top 1.5em
+    
+      .matches_played
+        :text-align right
+
+      img.chart
+        :margin-top 1em
 
     #opponents
       h3
