--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -225,6 +225,15 @@ h3
     :background-color #FCC
     :border solid 1px #C66
 
+  #logs
+    a:hover
+      :text-decoration none
+
+    img
+      :margin 0
+      :padding 0
+      :vertical-align text-bottom
+
   label
     :display block
   
