--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -179,6 +179,12 @@ h3 {
   border: solid 1px #DD9A24;
   background-color: #FCC;
   border: solid 1px #C66; }
+#bd #logs a:hover {
+  text-decoration: none; }
+#bd #logs img {
+  margin: 0;
+  padding: 0;
+  vertical-align: text-bottom; }
 #bd label {
   display: block; }
   #bd label input {
