--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -226,6 +226,20 @@ h3
     :border solid 1px #C66
 
   #logs
+    a.rss
+      :float right
+      :margin 0
+      :padding 0
+      :vertical-align text-bottom
+      :position relative
+      :top -4px
+  
+    .list
+      :margin 0
+      :padding 5px
+      :border-top 1px solid #999999
+      :border-bottom 1px solid #999999
+  
     a:hover
       :text-decoration none
 
