--- a/app/views/dashboard/_matches_per_day.html.haml
+++ b/app/views/dashboard/_matches_per_day.html.haml
@@ -1,5 +1,5 @@
 %h3= 'Matches played per day'[]
-= image_tag matches_per_day_chart(matches_per_day), :class => 'chart', :alt => 'Chart showing matches per day'
+= image_tag matches_per_day_chart(matches_per_day), :class => 'chart', :alt => 'Chart showing matches per day'[]
 
 .list
   %table
