--- a/app/views/dashboard/_matches_per_day.html.haml
+++ b/app/views/dashboard/_matches_per_day.html.haml
@@ -5,7 +5,7 @@
   %table
     %tr
       %th.date= 'Date'[]
-      %th.matches_played= 'Matches played'[]
+      %th.matches_played= 'Matches'[]
 
     - matches_per_day.each do |day|
       %tr{ :class => cycle('odd', 'even') }
